# school_control_system_repository

./: config_conection.py  conn.py  main.py  pyproject.toml
alembic/: env.py
school_control_system_repository/: __init__.py  config.py
